# rafsbsc

./: README.md  atomic.md  pyproject.toml  requirements.txt
notebooks/: bsc.ipynb  bsc_final.ipynb  bsc_simulation_minimal.py  run_partA_min.py  thesis_experiment_mvp.ipynb
notebooks/old/: FF25 vs market.ipynb  experiment.ipynb  psr_market_robustness.ipynb
src/: __init__.py  bsc_final_api.py  bsc_final_runtime.py  garch_oracle.py  plot_oracle_coverage.py  sharpe_mc.py
src/finance_data/: __init__.py  datasets.py  french.py
src/finance_data/bsc/: __init__.py  api.py  eta.py  garch_oracle.py  plotting.py  runtime.py  sharpe_mc.py
tests/: test_bsc_eta.py  test_bsc_final_api_cache.py  test_bsc_final_api_plotting.py  test_bsc_final_runtime.py  test_bsc_library_workflows.py  test_plot_oracle_coverage.py  test_run_partA_min.py
