[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharpe-mc"
version = "0.1.0"
description = "Notebook support code for Sharpe and Fama-French analyses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "arch>=6.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pandas-datareader>=0.10",
  "pyarrow>=16.0",
  "seaborn>=0.13",
  "scipy>=1.9",
  "statsmodels>=0.14"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
